second update, nothing much done

--- a/index.html
+++ b/index.html
@@ -55,8 +55,27 @@
       <div class="hero-container-desktop d-none d-lg-block"></div>
       <div class="hero-container-mobile d-lg-none"></div>
 
+      <!-- CONTENT SECTION -->
+
+      <div class="container">
+        <div class="row p-4">
+          <div class="col-lg-12">
+            <h3>A body section</h3>
+            <p>Some text</p>
+            <p>Some text</p>
+            <p>Some text</p>
+
+            <h5>A body section</h5>
+            <p>Some text</p>
+            <p>Some text</p>
+            <p>Some text</p>
+            
+          </div>
+        </div>
+      </div>
+
       <!-- FOOTER SECTION -->
-        <div class="row text-color">
+        <div class="row p-4 text-color">
 
             <div class="col-lg-6 col-md-12 bg-light">
               <div class="contacts mx-2 p-5">
