--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <div class="row p-4 commontext my-5">
             <div class="col-xl-6 col-lg-12">
 
-              <div class="row p-4 text-center">
+              <div class="row p-4 justify-content-center">
                 <h1>Kuidas me aitame?</h1>
               </div>
 
