--- a/meist.html
+++ b/meist.html
@@ -67,13 +67,13 @@
 
         <div class="container-fluid">
 
-          <div class="row p-4 text-center my-4">
+          <div class="row p-4 justify-content-center my-4">
             <h1>Need on meie jalutajad.</h1>
           </div>
 
               <div class="row p-4 px-3 justify-content-around">
 
-                    <div class="col-lg-4 col-md-6 col-sm-12 my-4 d-flex justify-content-center">
+                    <div class="card-left col-lg-4 col-md-6 col-sm-12 my-4 d-flex justify-content-center">
                       <div class="card">
                         <img class="card-img-top" src="static/img/female.webp" alt="Card image cap">
                         <div class="card-body commontext">
@@ -83,7 +83,7 @@
                       </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 col-sm-12 my-4 d-flex justify-content-center">
+                    <div class="card-right col-lg-4 col-md-6 col-sm-12 my-4 d-flex justify-content-center">
                       <div class="card">
                         <img class="card-img-top" src="static/img/male.webp" alt="Card image cap">
                         <div class="card-body commontext">
