Brand link fixed

--- a/kontakt.html
+++ b/kontakt.html
@@ -29,8 +29,8 @@
 
           <nav class="navbar navbar-expand-sm navbar-light navbar-custom navbar-position">
   
-              <a class="desk-logo navbar-brand me-auto d-none d-lg-block" href="#"></a>
-              <a class="mobile-logo navbar-brand me-auto d-lg-none" href="#"></a>
+              <a class="desk-logo navbar-brand me-auto d-none d-lg-block" href="index.html"></a>
+              <a class="mobile-logo navbar-brand me-auto d-lg-none" href="index.html"></a>
 
               <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
