phone number no wrap added, made the phone icon smaller

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                   <p><span class="fa-md"><i class="fa fa-phone" style="font-size: 1.2em; color: #373A3A;"></i></span><span class="phone" id="phone"></span></p>
                   <p><span class="fa-md"><i class="fa fa-envelope" style="font-size: 1.2em; color: #373A3A;"></i></span><span class="email" id="email"></span></p>
                   
-                  <p>Telefon: +37256565656</p>
+                  <p>Telefon: <span class="text-nowrap">+372 56 565 656</span></p>
                   <p>Email: tere@jalutame.ee</p>
                   <p>Aadress: </p>
                   <p>Jalutame OÜ</p>
