--- a/meist.html
+++ b/meist.html
@@ -106,7 +106,7 @@
                   <div class="mb-2">
                     <img src="static/img/jalutame_160_60_white.svg" alt="Jalutame!">
                   </div>
-                  <p>Telefon: +37256565656</p>
+                  <p>Telefon: <span class="text-nowrap">+372 56 565 656</span></p>
                   <p>Email: tere@jalutame.ee</p>
                   <p>Aadress: </p>
                   <p>Jalutame OÜ</p>
