--- a/kontakt.html
+++ b/kontakt.html
@@ -82,7 +82,7 @@
                                         <!-- Create separate links for mobile and desktop -->
 
                                         <p class="d-none d-md-block h2 bold">Telefon: +37256565656</p>
-                                        <a class="d-none d-block d-sm-block d-md-none" href="tel:+37256565656"><img src="static/img/phone.svg" alt="Helista nupp"></a>
+                                        <a class="d-none d-block d-sm-block d-md-none" href="tel:+37256565656"><img class="phone-icon" src="static/img/phone.svg" alt="Helista nupp"></a>
                                         
 
                                     </div>
@@ -144,7 +144,7 @@
                   <div class="mb-2">
                     <img src="static/img/jalutame_160_60_white.svg" alt="Jalutame!">
                   </div>
-                  <p>Telefon: +37256565656</p>
+                  <p>Telefon: <span class="text-nowrap">+372 56 565 656</span></p>
                   <p>Email: tere@jalutame.ee</p>
                   <p>Aadress: </p>
                   <p>Jalutame OÜ</p>
